<resources>
    <string name="app_name">FK Snaha Real - Fan App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="player_save">Uložiť</string>
    <string name="player_name">Meno hráča</string>
    <string name="player_lastName">Priezvisko hráča</string>
    <string name="player_number">Číslo dresu</string>
    <string name="player_position">Pozícia hráča</string>
    <string name="player_goals">Počet gólov</string>
    <string name="player_assists">Počet asistencií</string>
    <string name="player_yellow">Počet žltých kariet</string>
    <string name="player_red">Počet červených kariet</string>
    <string name="player_minutes">Počet odohraných minút</string>
    <string name="supiska">Súpiska</string>
    <string name="exit_app">Ukonči aplikáciu</string>
    <string name="navrat_na_supisku">Návrat</string>
    <string name="admin_login">Admin Login</string>

    <string name="post_header">Nadpis príspevku</string>
    <string name="post_text">Text príspevku</string>
    <string name="post">Príspevky</string>
    <string name="gallery">Galéria </string>
    <string name="teams">Tabuľka</string>

    <string name="team_name">Názov tímu</string>
    <string name="team_played">Počet odohratých zápasov</string>
    <string name="team_goals_scored">Počet strelených gólov</string>
    <string name="team_conceded_scored">Počet inkasovaných gólov</string>
    <string name="team_points">Počet bodov</string>
    <string name="team_logo_image">Pridať logo(obrázok)</string>
    <string name="team_logo">Logo tímu</string>
    <string name="our_score">Naše skóre</string>
    <string name="opponent_team_score">Skóre oponenta</string>
    <string name="matchDate">Dátum zápasu</string>
    <string name="isPlayed">Odohratý?</string>
    <string name="isPlayedHome">Doma?</string>
    <string name="matches">Zápasy</string>
    <string name="matchTime">Čas zápasu</string>
    <string name="detaily_zapasu">Detaily zápasu</string>
    <string name="back">Back</string>
    <string name="lokacia">Lokácia</string>
    <string name="stav_zapasu">- : -</string>
    <string name="date_time">00.00.0000 00:00</string>
    <string name="doma">Location</string>
    <string name="zakladna_11">Základná zostava</string>
    <string name="nahradnici">Náhradníci</string>
    <string name="prehlad_zapasu">Prehľad našich udalostí</string>
    <string name="pridat_hraca_do_zakladnej_zostavy">Pridať hráča do základnej zostavy</string>
    <string name="pridat_nahradnika">Pridať náhradníka</string>
    <string name="pridat_event">Pridať event</string>
    <string name="zostava">Zostava</string>
    <string name="minute">Minúta</string>
    <string name="importovat_statistiky">Importovať štatistiky do súpisky</string>
    <string name="welcome_header">🟦 Vitaj v mobilnej aplikácii futbalového klubu FK Snaha Real</string>
    <string name="welcome_text">Vitaj v mobilnej aplikácii futbalového klubu FK Snaha Real – mieste, kde nájdeš všetko dôležité o svojom obľúbenom tíme.</string>
    <string name="welcome_text2">Sme tím, ktorý bol založený s cieľom rozvíjať futbalové nadšenie, podporovať mladé talenty a vytvárať silnú komunitu hráčov, fanúšikov a podporovateľov. Naše hodnoty sú odhodlanie, fair-play a tímová spolupráca – preto názov Snaha nie je náhoda.</string>
    <string name="bud_sucast">🫂 Buď súčasťou nášho príbehu</string>
    <string name="welcome_end">Nezáleží na tom, či si hráč, rodič, tréner alebo fanúšik – v tejto aplikácii máš vždy prístup k tomu, čo sa v klube deje. Spolu tvoríme jeden tím – FK Snaha Real!</string>
    <string name="welcome">Vitaj v aplikácií</string>

</resources>