<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="player.AddEditPlayerFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bck_color_1B2223"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postHeaderInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/color_white_f4fefd"
            app:boxBackgroundColor="@color/color3a4f50"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            app:cursorColor="@color/white"
            app:hintTextColor="@color/color_white_f4fefd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postHeaderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_header"
                android:maxLines="1"
                android:textColor="@color/color_white_f4fefd"
                app:boxBackgroundColor="@color/color3a4f50"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/color_white_f4fefd"
            app:boxBackgroundColor="@color/color3a4f50"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            app:cursorColor="@color/white"
            app:hintTextColor="@color/color_white_f4fefd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postHeaderInputLayout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postTexteEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/post_text"
                android:maxLength="700"
                android:textColor="@color/color_white_f4fefd"
                app:boxBackgroundColor="@color/color3a4f50"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/color0ef6cc"
            android:text="@string/player_save"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postTextInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>